fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body {
     display:flex;
     align-items: center;
     justify-content: center;
-    height: 20%;
     max-height: 20%;
     width: 100%;
     color: white;
@@ -40,7 +39,6 @@ h2 {
 .reel {
     display:flex;
     flex-direction: row;
-    height: 35%;
     max-height: 35%;
     flex: 1;
     width: 90%;
@@ -64,7 +62,7 @@ h2 {
 }
 
 .photos {
-    height:60%;
+    max-height:60%;
     flex:1 1 100%;
     width: 100%;
     display: flex;
@@ -81,7 +79,6 @@ h2 {
     display:flex;
     flex-direction: row;
     flex-wrap:wrap;
-    height: 60vh;
     width: 100vw;
 }
 
@@ -91,7 +88,6 @@ h2 {
     flex-direction: column;
     flex:1 1 20%;
     width: 25%;
-    height: 100%;
     margin: 0% 5% 0% 5%;
 }
 
@@ -99,7 +95,6 @@ h2 {
     display:flex;
     flex-direction: column;
     margin: 0% 10% 0% 10%;
-    max-height: 60%;
 }
 
 .bio-photo {
@@ -113,7 +108,6 @@ h2 {
     background-color: black;
     flex:1 1 60%;
     height: auto;
-    max-height: 100%;
     font-weight:100;
     margin-right: 5%;
     font-size: 17px;
